--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html, body{width:100%;height:100%;}
+html, body{margin:0;padding:0;}
 body{background-color: #000a12;font-family: sans-serif;}
 h1, h2, h3, h4, h5, h6, ul, li, ol, span{margin:0;padding:0;}
 a{color:#ddd;text-decoration: none;}
